--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 {% include footer.html %}
 
-<script src="/assets/js/jquery-2.1.1.min.js"></script>
-<script src="/assets/js/functions.js" type="text/javascript"></script>
+<script src="assets/js/jquery-2.1.1.min.js"></script>
+<script src="assets/js/functions.js" type="text/javascript"></script>
 </body>
 </html>
