--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Aravind Balla</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" href="favicon.ico">  
-  <link rel="stylesheet" href="assets/css/main.css" />
+	<title>Aravind Balla</title>
+	<meta charset="utf-8">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="{{ site.data.settings.seo.description }}">
+	<meta name="keywords" content="{{ site.data.settings.seo.keywords }}">
+	<meta rel="author" href="{{ site.data.settings.seo.rel-author }}">
+	<meta rel="publisher" href="{{ site.data.settings.seo.rel-publisher }}">
+	<link rel="shortcut icon" href="favicon.ico">  
+	<link rel="stylesheet" href="assets/css/main.css" />
+
+	{% include analytics.html %}
 </head>
 <body>
 
@@ -24,7 +31,7 @@
 
 {% include footer.html %}
 
-<script src="assets/js/jquery-2.1.1.min.js"></script>
-<script src="assets/js/functions.js" type="text/javascript"></script>
+	<script src="assets/js/jquery-2.1.1.min.js"></script>
+	<script src="assets/js/functions.js" type="text/javascript"></script>
 </body>
 </html>
